--- a/src/components/LabelingCanvasLabel.css
+++ b/src/components/LabelingCanvasLabel.css
@@ -10,18 +10,18 @@
 
 .LabelingCanvasLabel__resizeArea {
   position: absolute;
-  left: -8;
-  right: -8;
-  top: -8;
-  bottom: -8;
+  left: -8px;
+  right: -8px;
+  top: -8px;
+  bottom: -8px;
 }
 
 .LabelingCanvasLabel__moveArea {
   position: absolute;
-  left: 8;
-  right: 8;
-  top: 8;
-  bottom: 8;
+  left: 8px;
+  right: 8px;
+  top: 8px;
+  bottom: 8px;
   cursor: move;
 }
   .LabelingCanvasLabel:not(.LabelingCanvasLabel--isActive) .LabelingCanvasLabel__moveArea:hover {
@@ -30,11 +30,11 @@
 
 .LabelingCanvasLabel__title {
   position: absolute;
-  top: -14;
+  top: -14px;
   left: 0;
   cursor: text;
-  padding: 2;
-  font-size: 10;
+  padding: 2px;
+  font-size: 10px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -45,7 +45,7 @@
   max-width: calc(100% + 2px);
 }
 
-.LabelingCanvasLabel__classSelector {
+.LabelingCanvasLabel__LabelClassSelector {
   pointer-events: all;
   position: absolute;
   top: 0;
@@ -53,34 +53,14 @@
   right: 0;
   overflow-y: auto;
   bottom: 0;
-  padding-bottom: 16;
+  padding-bottom: 16px;
 }
-
-  .LabelingCanvasLabel__classSelector > button {
-    display: block;
-    width: 100%;
-    border: 0;
-    border-radius: 0;
-    padding: 1px 4px;
-    margin: 1;
-    cursor: pointer;
-    font-size: 12;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    height: auto;
-  }
-
-  .LabelingCanvasLabel__classSelector > form {
+  .LabelingCanvasLabel__LabelClassSelector > form {
     width: 100%;
     position: fixed;
     bottom: 0
   }
-  .LabelingCanvasLabel__classSelector > form > input {
+  .LabelingCanvasLabel__LabelClassSelector > form > input {
     width: calc(100% - 2px);
-    padding: 2;
-    font-size: 13;
-    border: 0;
-    border-radius: 0;
-    margin: 1;
     background-color: rgba(255,255,255,0.8);
   }
