--- a/src/components/ModalDialog.css
+++ b/src/components/ModalDialog.css
@@ -9,8 +9,18 @@
 }
   .ModalDialog > div {
     background-color: white;
+    background-image: linear-gradient(to top, rgba(226, 226, 226, 1) 0%, white 100%);
     border-radius: 3px;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.25);
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.25), inset 0 0 6px rgba(0,0,0,0.2);
     padding: 12px;
     min-width: 50%;
+    max-width: 90%;
+  }
+  .ModalDialog > div > h1 {
+    margin: 8px 4px 12px 4px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid lightgray;
+    border-radius: 3px;
+    font-size: 14px;
+    text-align: center;
   }
