--- a/src/components/SettingsPanel.css
+++ b/src/components/SettingsPanel.css
@@ -9,4 +9,20 @@
   border: 1px solid #ddd;
   border-radius: 3px;
   background-color: white;
+  color: #334;
+  font-size: 10px;
+  font-weight: bold;
+  padding: 2px 4px;
+}
+
+.SettingsPanel label {
+  font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+}
+.SettingsPanel label input {
+  margin-left: 4px;
+  width: 50%;
+  text-align: left;
+  min-width: 200px;
 }
