--- a/src/components/LabelingCanvasLabel.css
+++ b/src/components/LabelingCanvasLabel.css
@@ -10,18 +10,17 @@
 
 .LabelingCanvasLabel__resizeArea {
   position: absolute;
-  left: -6px;
-  right: -6px;
-  top: -6px;
-  bottom: -6px;
+  left: -2px;
+  right: -2px;
+  top: -2px;
+  bottom: -2px;
 }
-
 .LabelingCanvasLabel__moveArea {
   position: absolute;
-  left: 6px;
-  right: 6px;
-  top: 6px;
-  bottom: 6px;
+  left: 3px;
+  right: 3px;
+  top: 3px;
+  bottom: 3px;
   cursor: move;
 }
   .LabelingCanvasLabel:not(.LabelingCanvasLabel--isActive) .LabelingCanvasLabel__moveArea:hover {
@@ -35,14 +34,11 @@
   cursor: text;
   padding: 2px;
   font-size: 10px;
-  text-overflow: ellipsis;
-  overflow: hidden;
   white-space: nowrap;
   text-shadow: 1px 1px 2px rgba(255,255,255,0.4);
   font-weight: bold;
   pointer-events: all;
   margin: -1px -1px 0 -1px;
-  max-width: calc(100% + 2px);
 }
 
 .LabelingCanvasLabel__LabelClassSelector {
@@ -50,17 +46,13 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  overflow-y: auto;
-  bottom: 0;
-  padding-bottom: 16px;
+  border: 1px solid;
+  margin: -1px;
 }
   .LabelingCanvasLabel__LabelClassSelector > form {
     width: 100%;
-    position: fixed;
-    bottom: 0
   }
   .LabelingCanvasLabel__LabelClassSelector > form > input {
-    width: calc(100% - 2px);
+    width: 100%;
     background-color: rgba(255,255,255,0.8);
   }
