--- a/src/components/LabelingCanvasLabel.css
+++ b/src/components/LabelingCanvasLabel.css
@@ -1,8 +1,8 @@
-.LabelingCanvasLabel {
-  border-width: 1px;
-  border-style: solid;
+.LabelBox.LabelingCanvasLabel {
   position: absolute;
   z-index: 1101;
+  margin: 0;
+  top: auto;
 }
   .LabelingCanvasLabel--isActive {
     z-index: 1102;
@@ -26,20 +26,6 @@
   .LabelingCanvasLabel:not(.LabelingCanvasLabel--isActive) .LabelingCanvasLabel__moveArea:hover {
     background-color: rgba(255,255,255,0.15);
   }
-
-.LabelingCanvasLabel__title {
-  position: absolute;
-  top: -14px;
-  left: 0;
-  cursor: text;
-  padding: 2px;
-  font-size: 10px;
-  white-space: nowrap;
-  text-shadow: 1px 1px 2px rgba(255,255,255,0.4);
-  font-weight: bold;
-  pointer-events: all;
-  margin: -1px -1px 0 -1px;
-}
 
 .LabelingCanvasLabel__LabelClassSelector {
   pointer-events: all;
