screencasts for days

--- a/src/components/LabelingCanvasLabel.css
+++ b/src/components/LabelingCanvasLabel.css
@@ -41,4 +41,5 @@
   .LabelingCanvasLabel__LabelClassSelector > form > input {
     width: 100%;
     background-color: rgba(255,255,255,0.8);
+    color: black;
   }
