--- a/src/components/LabelBox.css
+++ b/src/components/LabelBox.css
@@ -3,8 +3,10 @@
   position: relative;
   margin-top: 16px;
   top: 16px;
-  margin-bottom: 32px;
   box-shadow: 0 0 1px rgba(255, 255, 255, 0.2);
+}
+.LabelBox:not(:last-child) {
+  margin-bottom: 32px;
 }
 
 .LabelBox__label {
