--- a/src/components/LabelClassSelector.css
+++ b/src/components/LabelClassSelector.css
@@ -6,12 +6,10 @@
     width: 100%;
     border: 0;
     border-radius: 0;
-    padding: 1px 4px;
+    padding: 4px;
     margin: 0;
     cursor: pointer;
     font-size: 12px;
-    overflow: hidden;
-    text-overflow: ellipsis;
     height: auto;
     text-transform: none;
     text-align: left;
@@ -21,11 +19,18 @@
   }
 
   .LabelClassSelector > form {
+    display: flex;
   }
   .LabelClassSelector > form > input {
-    padding: 2px;
+    flex: 1;
+    padding: 4px;
     font-size: 13px;
     border: 0;
+    border-top: 2px rgba(0, 0, 0, 0.5);
     border-radius: 0;
+    margin: 0;
+    min-width: 100px;
+  }
+  .LabelClassSelector > form > button {
     margin: 0;
   }
