--- a/src/components/WebVideoLabeler.css
+++ b/src/components/WebVideoLabeler.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .WebVideoLabeler,
 .WebVideoLabeler *,
 .WebVideoLabeler *:before,
@@ -6,8 +8,8 @@
 }
 
 .WebVideoLabeler {
-  font-family: Arial;
-  font-size: 16px;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 14px;
 }
 
 .WebVideoLabeler,
@@ -52,3 +54,10 @@
     .WebVideoLabeler button i + span {
       margin: 0 2px 0 4px;
     }
+
+.WebVideoLabeler h2 {
+  font-size: 18px;
+}
+.WebVideoLabeler ul {
+  line-height: 20px;
+}
