make grid size configurable, add settings range inputs

--- a/src/components/SettingsPanel.css
+++ b/src/components/SettingsPanel.css
@@ -25,12 +25,12 @@
     color: #555;
   }
 
-  .SettingsPanel label > input {
+  .SettingsPanel label input {
     flex: 1;
     background-color: #fff;
   }
 
-.SettingsPanel p pre {
-  display: inline-block;
-  margin: 0;
+.SettingsPanel__range {
+  display: flex;
+  align-items: center;
 }
