--- a/src/components/ModalDialog.css
+++ b/src/components/ModalDialog.css
@@ -33,6 +33,9 @@
       bottom: 0;
       background-color: lightgray;
     }
+    .ModalDialog__title > button:first-child {
+      float: right;
+    }
 
   .ModalDialog__children {
     max-height: calc(100vh - 56px - 64px - 48px - 100px);
