--- a/src/components/SettingsPanel.css
+++ b/src/components/SettingsPanel.css
@@ -34,3 +34,13 @@
   display: flex;
   align-items: center;
 }
+
+.SettingsPanel__radio-group {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.SettingsPanel .SettingsPanel__radio-group label {
+  align-items: center;
+}
