--- a/src/components/LabelBox.css
+++ b/src/components/LabelBox.css
@@ -15,10 +15,42 @@
   top: -16px;
   left: 0;
   margin: -1px -1px 0 -1px;
-  padding: 3px 4px;
   font-size: 10px;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(255,255,255,0.4);
   white-space: nowrap;
   pointer-events: all;
 }
+
+.LabelBox__label-text {
+  padding: 3px 4px;
+}
+
+.LabelBox__buttons {
+  position: absolute;
+  left: 100%;
+  display: flex;
+}
+  .LabelBox__buttons button {
+    background-color: transparent;
+    border: none;
+    height: auto;
+    margin: 0;
+    padding: 1px;
+    border-radius: 0;
+    height: 16px;
+    width: 16px;
+    color: inherit;
+    text-align: center;
+    display: block;
+    text-indent: -1px;
+  }
+  .LabelBox__buttons button:active:not(:disabled) {
+    border: none;
+  }
+  .LabelBox__buttons button:hover:not(:disabled) {
+    background-color: rgba(0,0,0,0.5);
+  }
+    .LabelBox__buttons button i {
+      font-size: 10px;
+    }
