--- a/src/components/ModalDialog.css
+++ b/src/components/ModalDialog.css
@@ -14,7 +14,6 @@
     background-image: linear-gradient(to top, rgba(226, 226, 226, 1) 0%, white 100%);
     border-radius: 3px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.25), inset 0 0 6px rgba(0,0,0,0.2);
-    padding-bottom: 12px;
   }
   .ModalDialog__title {
     font-size: 14px;
@@ -45,14 +44,26 @@
   .ModalDialog__children {
     max-height: calc(100vh - 56px - 64px - 48px - 100px);
     overflow-y: auto;
-    padding: 0 12px;
+    padding: 12px;
     clear: both;
   }
 
 .ModalDialog__buttons {
   display: flex;
-  padding: 0 12px;
+  padding: 12px;
+  position: relative;
 }
+
+  .ModalDialog__buttons:after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 1px;
+    left: 12px;
+    right: 12px;
+    top: 0;
+    background-color: lightgray;
+  }
 .ModalDialog__buttons button:last-child {
   flex: 1;
 }
