lots of styling and css worst practices

--- a/src/components/LabelBox.css
+++ b/src/components/LabelBox.css
@@ -63,7 +63,7 @@
   margin-bottom: 10px;
 }
 
-  .LabelBox label > p {
+  .LabelBox label p {
     font-size: 11px;
     margin: 2px 0;
     color: #555;
