--- a/src/components/LabelBox.css
+++ b/src/components/LabelBox.css
@@ -57,6 +57,7 @@
   display: flex;
   font-size: 13px;
   flex-direction: column;
+  border-color: inherit;
 }
 
 .LabelBox label:not(:last-child) {
@@ -69,7 +70,6 @@
     color: #555;
   }
 
-  .LabelBox label input {
+  .LabelBox label input:not([type="checkbox"]) {
     flex: 1;
-    background-color: #fff;
   }
