--- a/src/components/WebVideoLabeler.css
+++ b/src/components/WebVideoLabeler.css
@@ -11,6 +11,8 @@
   font-family: Roboto, Arial, sans-serif;
   font-size: 14px;
   --main-blue: rgb(85, 199, 231);
+  --light-blue: rgb(149, 223, 243);
+  --ultra-light-blue: rgb(207, 243, 252);
   --main-red: rgb(207, 18, 18);
 }
 
@@ -47,7 +49,7 @@
   }
   .WebVideoLabeler button:hover:not(:disabled) {
     cursor: pointer;
-    background-color: rgb(149, 223, 243);
+    background-color: var(--light-blue);
     animation: button-hover 0.16s ease-out 1;
   }
     .WebVideoLabeler button:hover:not(:disabled):before {
@@ -74,3 +76,84 @@
     .WebVideoLabeler button i + span {
       margin: 0 2px 0 4px;
     }
+
+.WebVideoLabeler input {
+  background-color: #fff;
+  padding: 3px;
+  font-family: inherit;
+  border: 2px solid var(--main-blue);
+  border-color: inherit;
+  border-radius: 1px;
+  transition: background-color .16s ease-out;
+}
+.WebVideoLabeler input:focus {
+  border-color: transparent;
+  outline: none;
+  background-color: var(--ultra-light-blue);
+  outline: 2px solid var(--main-blue);
+}
+
+.WebVideoLabeler input[type="checkbox"] {
+  -webkit-appearance: none;
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+  border: 2px solid var(--main-blue);
+  border-color: inherit;
+  border-radius: 1px;
+  padding: 0;
+  font-size: 12px;
+}
+
+.WebVideoLabeler input[type="checkbox"]:focus {
+  outline: 2px dashed var(--light-blue);
+}
+
+.WebVideoLabeler input[type="checkbox"]:checked {
+  background-color: var(--light-blue);
+  border-color: var(--main-blue);
+}
+.WebVideoLabeler input[type="checkbox"]:checked:after {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f00c';
+}
+
+.WebVideoLabeler input[type="range"] {
+  -webkit-appearance: none;
+  position: relative;
+  border: 0;
+  border-color: inherit;
+}
+.WebVideoLabeler input[type="range"]:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 2px;
+  right: 2px;
+  margin-top: -1px;
+  border: 2px solid;
+  border-color: inherit;
+}
+.WebVideoLabeler input[type="range"]:focus {
+  background-color: transparent;
+  outline: none;
+}
+.WebVideoLabeler input[type="range"]:focus:after {
+  border-color: var(--light-blue);
+  border-width: 3px;
+  left: 3px;
+  right: 3px;
+  margin-top: -2px;
+}
+.WebVideoLabeler input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 4px solid;
+  border-color: var(--main-blue);
+  height: 22px;
+  width: 5px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
