update buttons and make it snappy!

--- a/src/components/WebVideoLabeler.css
+++ b/src/components/WebVideoLabeler.css
@@ -46,6 +46,7 @@
   .WebVideoLabeler button:disabled {
     color: #888;
     background-color: #d6d8d2;
+    transition: none;
   }
   .WebVideoLabeler button:hover:not(:disabled) {
     cursor: pointer;
