--- a/src/components/ModalDialog.css
+++ b/src/components/ModalDialog.css
@@ -1,6 +1,6 @@
 .ModalDialog {
   position: fixed;
-  z-index: 1109;
+  z-index: var(--z-modal-dialog);
   top: 0; left: 0; right: 0; bottom: 0;
   background-color: rgba(0,0,0,0.6);
   display: flex;
